- implemented parsing of SL1-type (Sensei's Library goban-type) for <igoban>-tag:   - show original content with URL-arg 'raw'   - fixed example in goban-editor with extended SL1-syntax for borders in <igoban>-tag   - added goban-title, text-block to right or below of board   - added goban-links on markup-labels, marked with darker background-color for marker on goban   - automatically set hoshi-points if possible   - use stone-size/wood-color/smooth-edge config for player, loaded from ConfigBoard   - use static table-width for goban-board for automatic text-wrapping of board-title   - bugfixes

--- a/skins/dragon/screen.css
+++ b/skins/dragon/screen.css
@@ -1888,9 +1888,26 @@ div.GobanGfx {
    display: inline-block;
    margin: 1em;
    border: 1px outset darkblue; /*or: 1px dotted black;*/
+   float: left;
 }
-div.GobanGfx table.Goban td {
+div.GobanGfx div.Board table.Goban td {
    padding: 0px;
+}
+div.GobanGfx td.BoardLink {
+   background-color: #ca6a45;
+}
+div.GobanGfx div.Title {
+   text-align: center;
+   font-size: smaller;
+   padding: 5px;
+}
+div.GobanRaw {
+   display: inline-block;
+   margin: 1em;
+   border: 1px dotted black;
+}
+div.GobanEnd {
+   clear: left;
 }
 
 
